syntax = "proto3";

package turnly.channels.v1.signage_displays;

message GetPairingCodeSignageDisplayRequest {
  string name = 1;
}

message PairToLocationSignageDisplayRequest {
  string pairing_code = 1;
  string location_id = 2;
}

message UnpairSignageDisplayRequest {
  string id = 1;
  string location_id = 2;
}
